Fixed detail spacing

--- a/Mapbox_Testing/sass/map.scss
+++ b/Mapbox_Testing/sass/map.scss
@@ -51,15 +51,14 @@
 
 		.warning-info{
 			border-bottom: 1px solid rgba(0,0,0,.2);
-			height:80px;
+			// height:10px;
+			overflow:auto;
+			height:auto;
 			padding:5px 5px 5px 10px;
 
 			.icon{
 				float:left;
 				width:30%;
-				position:relative;
-				top: 50%;
-				transform: translateY(-50%);
 				img{
 					width:100%;
 					height:100%;
@@ -70,9 +69,9 @@
 	  			float:left;
 				width:calc(63%);
 				text-align:left;
-				position:relative;
-				top: 50%;
-				transform: translateY(-50%);
+				// position:relative;
+				// top: 50%;
+				// transform: translateY(-50%);
 				padding-left:3%;
 				
 				
@@ -87,6 +86,7 @@
 				p{
 					color:#c0c8d2;
 					margin:0;
+					font-size:12px;
 				}
 	  		}
 
